# shirobai

./: .gitignore  .gitmodules  Cargo.toml  Gemfile  Gemfile.stock  Gemfile.stock.performance  Gemfile.stock.rails  Gemfile.stock.rspec  Gemfile.with_shirobai.performance  Gemfile.with_shirobai.rails  Gemfile.with_shirobai.rspec  README.ja.md  README.md  Rakefile  shirobai.gemspec
.cargo/: config.toml
.claude/: CLAUDE.md
.claude/rules/: benches.md  ext-shirobai.md  lib-shirobai.md  shirobai-core.md  shirobai-performance.md  shirobai-rails.md  shirobai-rspec.md  spec.md
.github/workflows/: bench.yml  bump-version.yml  ci.yml  release.yml
.tmp/: rubocop_source
benches/: Gemfile.realconfig.main  Gemfile.realconfig.plugins  Gemfile.realconfig.plugins.main  Gemfile.realconfig.shirobai  Gemfile.realconfig.stock  README.md  aggregate_e2e.rb  autocorrect_audit.sh  e2e_bench.rb  implemented_cops.rb  incremental_bench.rb  offense_diff.rb  parity_compare.sh  parity_diff.sh  parity_diff_performance.sh  parity_diff_rails.sh  parity_diff_rspec.sh  real_cli_bench.sh  run_bench.sh  run_e2e.sh
crates/shirobai-core/: Cargo.toml  README.md
crates/shirobai-core/src/: lib.rs  pm_lex.rs  pm_lex_spike.rs  pm_lex_token_names.rs
crates/shirobai-core/src/rules/: abc_size.rs  access_modifier_indentation.rs  aligner.rs  ambiguous_block_association.rs  argument_alignment.rs  arguments_forwarding.rs  array_alignment.rs  ascii_identifiers.rs  assignment_indentation.rs  block_alignment.rs  block_delimiters.rs  block_length.rs  block_nesting.rs  bundle.rs  class_length.rs  closing_parenthesis_indentation.rs  code_length.rs  colon_method_call.rs  complexity.rs  debugger.rs  def_end_alignment.rs  dispatch.rs  dot_position.rs  duplicate_magic_comment.rs  duplicate_methods.rs  else_alignment.rs  empty_comment.rs  empty_line_after_guard_clause.rs  empty_line_after_magic_comment.rs  empty_line_between_defs.rs  empty_lines.rs  empty_lines_around_arguments.rs  empty_lines_around_body.rs  end_alignment.rs  end_of_line.rs  extra_spacing.rs  file_null.rs  first_argument_indentation.rs  first_array_element_indentation.rs  first_hash_element_indentation.rs  (+78 more)
crates/shirobai-core/tests/: pm_lex_canary.rs
docs/: cop-status.md  release.md
ext/shirobai/: Cargo.toml  README.md  extconf.rb
ext/shirobai/src/: lib.rs
gems/shirobai-performance/: Gemfile  LICENSE.txt  README.md  shirobai-performance.gemspec
gems/shirobai-performance/lib/: shirobai-performance.rb
gems/shirobai-performance/spec/: spec_helper.rb
gems/shirobai-performance/spec/shirobai/: autocorrect_incompatibility_spec.rb  correctable_parity_spec.rb  non_ascii_offset_parity_spec.rb
gems/shirobai-rails/: Gemfile  README.md  shirobai-rails.gemspec
gems/shirobai-rails/lib/: shirobai-rails.rb
gems/shirobai-rails/spec/: spec_helper.rb
gems/shirobai-rails/spec/shirobai/: autocorrect_incompatibility_spec.rb  correctable_parity_spec.rb  non_ascii_offset_parity_spec.rb  rails_segment_spec.rb
gems/shirobai-rspec/: Gemfile  README.md  shirobai-rspec.gemspec
gems/shirobai-rspec/lib/: shirobai-rspec.rb
gems/shirobai-rspec/spec/: smoke_tests  spec_helper.rb
gems/shirobai-rspec/spec/shirobai/: autocorrect_incompatibility_spec.rb  correctable_parity_spec.rb  metadata_family_edge_cases_spec.rb  non_ascii_offset_parity_spec.rb  rspec_segment_spec.rb
lib/: shirobai.rb
lib/shirobai/: README.md  dispatch.rb  inject.rb  node_locator.rb  source_offsets.rb  version.rb
lib/shirobai/cop/: base.rb
lib/shirobai/cop/layout/: access_modifier_indentation.rb  argument_alignment.rb  array_alignment.rb  assignment_indentation.rb  block_alignment.rb  closing_parenthesis_indentation.rb  def_end_alignment.rb  dot_position.rb  else_alignment.rb  empty_comment.rb  empty_line_after_guard_clause.rb  empty_line_after_magic_comment.rb  empty_line_between_defs.rb  empty_lines.rb  empty_lines_around_arguments.rb  empty_lines_around_begin_body.rb  empty_lines_around_block_body.rb  empty_lines_around_body_shared.rb  empty_lines_around_class_body.rb  empty_lines_around_exception_handling_keywords.rb  empty_lines_around_method_body.rb  empty_lines_around_module_body.rb  (+36 more)
spec/: README.md  shirobai_spec.rb  spec_helper.rb
spec/shirobai/: autocorrect_incompatibility_spec.rb  correctable_parity_spec.rb  node_locator_spec.rb  non_ascii_offset_parity_spec.rb
spec/shirobai/cop/: bundle_eligible_spec.rb
spec/support/: edge_case_parity.rb
(+361 files in other folders)
