[workspace]
members = ["ext/shirobai", "crates/shirobai-core"]
resolver = "3"

# Single source of the crate version. bump-version.yml rewrites this line to
# the semver form of the gem CalVer (leading zeros stripped: gem 2026.0709.0000
# is crate 2026.709.0 -- cargo rejects leading zeros in numeric segments, and
# Gem::Version normalizes to the same integers, so the two stay value-equal).
[workspace.package]
version = "2026.713.0"

# Release tuning. The hot path crosses crate boundaries (ext cdylib -> core
# check_* -> ruby-prism); without LTO the cross-crate calls are not inlined and
# codegen-units=16 (the release default) further fragments optimization. Fat LTO
# + a single codegen unit lets the whole graph optimize together. opt-level=3 is
# already the release default. panic is left at the default (unwind): magnus
# relies on unwinding to surface Ruby exceptions, so panic=abort is unsafe here.
[profile.release]
lto = "fat"
codegen-units = 1
