[package]
name = "shirobai-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ruby-prism = "1.9.0"
self_cell = "1"
unicode-width = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "walk_profile"
path = "src/bin/walk_profile.rs"

[[bin]]
name = "analysis_profile"
path = "src/bin/analysis_profile.rs"
