[package]
name = "shirobai-core"
version.workspace = true
edition = "2024"

[dependencies]
ruby-prism = "1.9.0"
# Direct dep on the -sys crate to reach pm_parser_init / pm_parse / lex_callback
# from pm_lex. ruby-prism 1.9.0 already depends on this exact version, so cargo
# unifies it into a single build (no second prism compile).
ruby-prism-sys = "=1.9.0"
self_cell = "1"
unicode-width = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "walk_profile"
path = "src/bin/walk_profile.rs"

[[bin]]
name = "analysis_profile"
path = "src/bin/analysis_profile.rs"

# pm_lex probe: token dump / canary / profile harness.
[[bin]]
name = "pm_lex_probe"
path = "src/bin/pm_lex_probe.rs"
