[package]
# The package name must be "shirobai": the RubyGems Cargo builder looks
# for the dylib named after the package (not the [lib] name), so a
# mismatch breaks `gem install` with "Dynamic library not found".
name = "shirobai"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "shirobai"
crate-type = ["cdylib"]

[dependencies]
magnus = "0.8"
shirobai-core = { path = "../../crates/shirobai-core" }
